syntax = "proto3";

option java_package = "hu.bme.mit.inf.modes3.messaging.mms.messages";
option java_multiple_files = true;

message TrainReferenceSpeedControl {
	uint32 trainID = 1;
	uint32 referenceSpeed = 2;
}
