syntax = "proto3";

import "Enums.proto";

option java_package = "hu.bme.mit.inf.modes3.messaging.mms.messages";
option java_multiple_files = true;

message TurnoutState {
	uint32 turnoutID = 1;
	TurnoutStateValue state = 2;
}
